--- a/koha-tmpl/intranet-tmpl/prog/en/modules/pos/register.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/pos/register.tt
@@ -90,8 +90,8 @@
                             [% IF credit.debit %]
                             <tr>
                                 <td>[% accountline.accountlines_id | html %]</td>
-                                <td>{ "type": "credit", "identifier": "[%- accountline.credit_number | html -%]", "description": "[%- PROCESS account_type_description account=accountline -%] ([% AuthorisedValues.GetByCode( 'PAYMENT_TYPE', accountline.payment_type ) | html %])", "amount": "[% accountline.amount * -1 | $Price %]" }</td>
-                                <td>[% IF accountline.timestamp %][% accountline.timestamp | $KohaDates with_hours => 1 %][% END %]</td>
+                                <td>{ "type": "credit", "identifier": "[%- accountline.credit_number | html -%]", "description": "[%- PROCESS account_type_description account=accountline -%] ([% AuthorisedValues.GetByCode( 'PAYMENT_TYPE', accountline.payment_type ) | html %])", "amount": "[% accountline.amount * -1 | $Price %]", "timestamp": "[% accountline.timestamp | $KohaDates with_hours => 1 %]" }</td>
+                                <td></td>
                                 <td>
                                     [%- PROCESS account_type_description account=credit.debit -%]
                                     [%- IF credit.debit.description -%] ([% credit.debit.description | html %])[%- END -%]
@@ -114,7 +114,7 @@
                             [% IF debit.credit %]
                             <tr>
                                 <td>[% accountline.accountlines_id | html %]</td>
-                                <td>{ "type": "debit", "identifier": "[%- accountline.credit_number | html -%]", "description": "[%- PROCESS account_type_description account=accountline -%] ([% AuthorisedValues.GetByCode( 'PAYMENT_TYPE', accountline.payment_type ) | html %])", "amount": "[% accountline.amount * -1 | $Price %]" }</td>
+                                <td>{ "type": "debit", "identifier": "[%- accountline.credit_number | html -%]", "description": "[%- PROCESS account_type_description account=accountline -%] ([% AuthorisedValues.GetByCode( 'PAYMENT_TYPE', accountline.payment_type ) | html %])", "amount": "[% accountline.amount * -1 | $Price %]", "timestamp": "[% accountline.timestamp | $KohaDates with_hours => 1 %]" }</td>
                                 <td></td>
                                 <td>[%- PROCESS account_type_description account=debit.credit -%]</td>
                                 <td>
@@ -179,8 +179,8 @@
                             [% IF credit.debit %]
                             <tr>
                                 <td>[% accountline.accountlines_id | html %]</td>
-                                <td>{ "type": "credit", "identifier": "[%- accountline.credit_number | html -%]", "description": "[%- PROCESS account_type_description account=accountline -%] ([% AuthorisedValues.GetByCode( 'PAYMENT_TYPE', accountline.payment_type ) | html %])", "amount": "[% accountline.amount * -1 | $Price %]" }</td>
-                                <td>[% IF accountline.timestamp %][% accountline.timestamp | $KohaDates with_hours => 1 %][% END %]</td>
+                                <td>{ "type": "credit", "identifier": "[%- accountline.credit_number | html -%]", "description": "[%- PROCESS account_type_description account=accountline -%] ([% AuthorisedValues.GetByCode( 'PAYMENT_TYPE', accountline.payment_type ) | html %])", "amount": "[% accountline.amount * -1 | $Price %]", "timestamp": "[% accountline.timestamp | $KohaDates with_hours => 1 %]" }</td>
+                                <td></td>
                                 <td>
                                     [%- PROCESS account_type_description account=credit.debit -%]
                                     [%- IF credit.debit.description -%] ([% credit.debit.description | html %])[%- END -%]
@@ -203,7 +203,7 @@
                             [% IF debit.credit %]
                             <tr>
                                 <td>[% accountline.accountlines_id | html %]</td>
-                                <td>{ "type": "debit", "identifier": "[%- accountline.credit_number | html -%]", "description": "[%- PROCESS account_type_description account=accountline -%] ([% AuthorisedValues.GetByCode( 'PAYMENT_TYPE', accountline.payment_type ) | html %])", "amount": "[% accountline.amount * -1 | $Price %]" }</td>
+                                <td>{ "type": "debit", "identifier": "[%- accountline.credit_number | html -%]", "description": "[%- PROCESS account_type_description account=accountline -%] ([% AuthorisedValues.GetByCode( 'PAYMENT_TYPE', accountline.payment_type ) | html %])", "amount": "[% accountline.amount * -1 | $Price %]", "timestamp": "[% accountline.timestamp | $KohaDates with_hours => 1 %]" }</td>
                                 <td></td>
                                 <td>[%- PROCESS account_type_description account=debit.credit -%]</td>
                                 <td>
@@ -372,7 +372,7 @@
                     var details = JSON.parse(rows.data().pluck(1).pop());
                     var identifier = details.identifier || group;
                     return $('<tr class="'+details.type+'"/>')
-                        .append( '<td>'+identifier+'</td>' )
+                        .append( '<td>'+details.timestamp+' ('+identifier+')</td>' )
                         .append( '<td colspan="2">'+details.description+'</td>' )
                         .append( '<td>'+details.amount+'</td>' )
                         .append( '<td><button class="printReceipt btn btn-default btn-xs" data-accountline="'+group+'"><i class="fa fa-print"></i> ' + _("Print receipt") + '</button></td>');
@@ -396,7 +396,7 @@
                     var details = JSON.parse(rows.data().pluck(1).pop());
                     var identifier = details.identifier || group;
                     return $('<tr class="'+details.type+'"/>')
-                        .append( '<td>'+identifier+'</td>' )
+                        .append( '<td>'+details.timestamp+' ('+identifier+')</td>' )
                         .append( '<td colspan="2">'+details.description+'</td>' )
                         .append( '<td>'+details.amount+'</td>' )
                         .append( '<td><button class="printReceipt btn btn-default btn-xs" data-accountline="'+group+'"><i class="fa fa-print"></i> Print receipt</button></td>');
